raspberry/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  name: nginx-ingress
  namespace: default
spec:
  rules:
  - host: wgviktoria.internet-box.ch
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: http
        path: /
  tls:
  - hosts:
    - wgviktoria.internet-box.ch
    secretName: wgviktoria-internet-box-ch-tls
