raspberry/nginx/nginx-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: nginx-ingress
 annotations:
  kubernetes.io/ingress.class: nginx
  cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
 tls:
   - hosts:
     - wgviktoria.internet-box.ch
     secretName: wgviktoria-internet-box-ch-tls
 rules:
 - host: wgviktoria.internet-box.ch
   http:
     paths:
     - path: /
       backend:
         serviceName: nginx-service
         servicePort: http
